# bibtera

./: .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  justfile  output.md
.github/workflows/: cargo-publish.yml  codeql.yml  dco.yml  dependency-review.yml  md-lint.yml  osv-scanner.yml  rust.yml  scorecard.yml
examples/: input_iclr2025_1k.bib  sample.bib  sample_output.md  substitution_map_default.json  template_entry.json  template_entry.md  template_entry_single.json
src/: cli.rs  config.rs  latex.rs  lib.rs  main.rs  math.rs  parser.rs  template.rs  utils.rs
templates/: bibtex_entry.html
tests/: end_to_end_tests.rs  integration_tests.rs
tests/specifications/: end-to-end-tests.json  integration-tests.json
tests/specifications/schemas/: fixture-catalogue.schema.json  scenario-catalogue.schema.json
tests/test-data/: fixtures.json
