[package]
name = "bibtera"
version = "0.1.0"
license = "MIT"
description = "BibTeX translator using the Tera templating engine"
edition = "2024"
repository = "https://github.com/anirbanbasu/bibtera"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Templating engine
tera = "1.20"

# BibTeX parsing
biblatex = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# JSON serialization for JSON output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress bar for non-verbose transformation output
indicatif = "0.18"

# Path utilities
pathdiff = "0.2"

# SHAKE-128 hashing for deterministic filename bytes
sha3 = "0.11"

# UUID formatting for uuid7 filename strategy
uuid = "1.18"

[features]
default = []
